--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <div>
       <form action="">
         <h1>Login</h1>
-        <div>
-            
+        <div class="input-box">
+            <input type="username" placeholder="Username">
+        </div>
+        <div class="input-box">
+            <input type="password" placeholder="Password" required>
+        </div>
+        <div class="remember-forget">
+       <label>
+        <input type="checkbox">Remember Me
+       </label>
+       <a href="#">Forget password</a>
         </div>
       </form>
     </div>
