--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Login</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <div>
@@ -11,6 +12,7 @@
         <h1>Login</h1>
         <div class="input-box">
             <input type="username" placeholder="Username">
+            <i class='bx bxs-user'></i>
         </div>
         <div class="input-box">
             <input type="password" placeholder="Password" required>
@@ -20,6 +22,10 @@
         <input type="checkbox">Remember Me
        </label>
        <a href="#">Forget password</a>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <div class="register-link">
+            <p>Don't have an account <a href="#">Register</a></p>
         </div>
       </form>
     </div>
