--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Login</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -16,6 +17,7 @@
         </div>
         <div class="input-box">
             <input type="password" placeholder="Password" required>
+            <i class='bx bxs-lock-alt'></i>
         </div>
         <div class="remember-forget">
        <label>
