--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div>
+    <div class="wrapper">
       <form action="">
         <h1>Login</h1>
         <div class="input-box">
